--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,22 @@
 <p>Welcome to {{title}}</p>
 
 <div>Voice here</div>
-<input type="file" accept="audio/*;capture=microphone">
+
+  <p>Make sure you are using a recent version of Google Chrome.</p>
+  <p>Also before you enable microphone input either plug in headphones or turn the volume down if you want to avoid ear splitting feedback!</p>
+
+  <button onclick="startRecording(this);">record</button>
+  <button onclick="stopRecording(this);" disabled>stop</button>
+  
+  <h2>Recordings</h2>
+  <ul id="recordingslist"></ul>
+  
+  <h2>Log</h2> 
+  <pre id="log"></pre>
+
+
+
+<script src="./components/Recorderjs/recorder.js"></script>
+<script src="./app/app.js"></script>
 
 
